set(lib_name ${PROJECT_NAME}-dag)
file(GLOB SOURCES src/*.cpp)
if (ENABLE_SHARED)
    add_library(${lib_name} SHARED ${SOURCES})
    set_target_properties(${lib_name} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
else()
    add_library(${lib_name} STATIC ${SOURCES})
endif()
#target_link_libraries(${lib_name} PUBLIC afr_common)
#add_dependencies(${lib_name} afr_common)
